# result_enum_err

./: .gitignore  .justfile  README.md  env.example  pyproject.toml  requirements.txt
src/: main.py
